Changes in version 0.1.2.4-alpha - 2006-11-??
  o Major features
    - Add support for using natd; this allows FreeBSDs earlier than 5.1.2 to
      have ipfw send connections through Tor without using SOCKS. (Patch from
      Zajcev Evgeny with tweaks from tup.)

  o Minor features
    - Add breakdown of public key operations to dumped statistics.

  o Minor features, controller
    - Make all connections to addresses of the form .noconnect immediately
      get closed.  This is more useful than you'd think, since it lets
      application/controller combos successfully tell when they're talking to
      the same Tor by watching for STREAM events.

  o Major bugfixes
    - Handle TransPort connections even when the server sends data before
      the client sends data.  Previously, the connection would just hang
      until the client sent data. (Patch from tup based on patch from
      Zajcev Evgeny.)
    - Fix a memory leak when we fail to pick an exit node.

  o Minor bugfixes
    - Don't log spurious warnings when we see a circuit close reason we
      don't recognize; it's probably just from a newer version of Tor.
    - Have directory authorities allow larger amounts of drift in uptime
      without replacing the server descriptor: previously, a server that
      restarted every 30 minutes could have 48 "interesting" descriptors
      per day.
    - Start linking to the Tor specification and Tor reference manual
      correctly in the Windows installer.
    - Avoid assert failure when our cached-routers file is empty on
      startup.


Changes in version 0.1.2.3-alpha - 2006-10-29
  o Minor features:
    - Prepare for servers to publish descriptors less often: never
      discard a descriptor simply for being too old until either it is
      recommended by no authorities, or until we get a better one for
      the same router. Make caches consider retaining old recommended
      routers for even longer.