@@ -6,6 +6,8 @@ Changes in version 0.1.2.4-alpha - 2006-11-??
 
   o Minor features
     - Add breakdown of public key operations to dumped statistics.
+    - Make cross.sh cross-compilation script work even when autogen.sh hasn't
+      been run. (Patch from Michael Mohr.)
 
   o Minor features, controller
     - Make all connections to addresses of the form .noconnect immediately
